update player and buf fix on IE

--- a/src/app.scss
+++ b/src/app.scss
@@ -1,47 +1,224 @@
+$agilitestOrange: #FABA00;
+$agilitestBlack: #11171B;
+$agilitestWhite: #FCFCFC;
+
+//head
+#head {
+  display: block;
+  height: 80px;
+  background-color: #FCFCFC;
+  margin: 5px 20px 0px 20px;
+  border-radius: 5px;
+}
+
+#logo {
+  width: 20%;
+    height: 100%;
+    display: inline-block;
+    vertical-align: top;
+}
+
+#logo img {
+  height: 80%;
+  vertical-align: middle;
+  margin: 10px;
+}
+
+//slideShow
 #slideshow {
-  display: inline-block;
+  display: table-cell;
   padding: 0;
   margin: 0;
-  height: 780px;
+  background-color: black;
+  vertical-align: middle;
+  text-align: center;
 }
 
 #slideshow img {
-  position: absolute;
-  visibility:hidden;
+  position: relative;
+  max-width: 100%;
+  max-height: 100%;
+  opacity: 0;
+  display: none;
 }
 
+// output
+#output {
+  display: none;
+  margin: 0 30px;
+}
+
+
+//nav panel
 .nav {
   display: inline-block;
-  margin: 10px 20px;
+  position: relative;
+  margin: 7px 20px;
 }
 
-#progressSlider {
-  width: 800px;
+//player
+#playLabel, #pauseLabel, #restart, #fullScreen {
+  display: inline-block;
+  color: $agilitestWhite;
+  font-size: 25px;
+  margin: 0 3px;
 }
 
 #frame {
-  background-color: #06060F;
+  background-color: $agilitestWhite;
   padding: 20px;
   border-radius: 10px;
+  margin: 20px;
 }
 
 #player {
-  background-color: #595A65;
+  background-color: $agilitestBlack;
   border-radius: 5px;
   padding: 0;
   display: inline-block;
-  /* max-height: 900px; */
-  /* max-width: 60%; */
-  height: 800px;
-  width: 1024px;
 }
 
+
+//upload panel
 #upload {
   padding: 5px;
   display: inline-block;
-  color: #BCC0E7;
+  color: $agilitestBlack;
   font-family: Arial, Helvetica, sans-serif;
   vertical-align: top;
-  font-size: 20px;
-  max-width: 60vw;
+  font-size: 15px;
+  width: 15%;
+}
+
+//slider
+#progressSlider {
+  vertical-align: super;
+}
+
+input[type=range] {
+  -webkit-appearance: none;
+  -moz-apperance: none;
+  border-radius: 6px;
+  height: 6px;
+}
+
+#progressDisplay {
+  color: $agilitestOrange;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 15px;
+  display: inline-block;
+  vertical-align: super;
+}
+
+input[type="range"]::-moz-range-track {
+  border: none;
+  background: none;
+  outline: none;
+}
+
+input[type=range]:focus {
+  outline: none;
+  border: none;
+}
+
+input[type=range]::-webkit-slider-thumb {
+  -webkit-appearance: none !important;
+  background-color: $agilitestOrange;
+  height: 13px;
+  width: 13px;
+  border-radius: 50%;
+}
+
+input[type=range]::-moz-range-thumb {
+  -moz-appearance: none !important;
+  background-color: $agilitestOrange;
+  border: none;
+  height: 13px;
+  width: 13px;
+  border-radius: 50%;
+}
+
+// loader
+$brand-success: $agilitestOrange;
+$loader-size: 4em;
+$check-height: $loader-size/2;
+$check-width: $check-height/2;
+$check-left: ($loader-size/6 + $loader-size/12);
+$check-thickness: 3px;
+$check-color: $brand-success;
+
+.circle-loader {
+  margin-top: $loader-size/8;
+  border: 1px solid $agilitestWhite;
+  border-left-color: $check-color;
+  animation: loader-spin 1.2s infinite linear;
+  position: relative;
+  display: inline-block;
+  vertical-align: top;
+  border-radius: 50%;
+  width: $loader-size;
+  height: $loader-size;
+}
+
+.load-complete {
+  -webkit-animation: none;
+  animation: none;
+  border-color: $check-color;
+  transition: border 500ms ease-out;
+}
+
+.checkmark {
+  display: none;
+  
+  &.draw:after {
+    animation-duration: 800ms;
+    animation-timing-function: ease;
+    animation-name: checkmark;
+    transform: scaleX(-1) rotate(135deg);
+  }
+  
+  &:after {
+    opacity: 1;
+    height: $check-height;
+    width: $check-width;
+    transform-origin: left top;
+    border-right: $check-thickness solid $check-color;
+    border-top: $check-thickness solid $check-color;
+    content: '';
+    left: $check-left;
+    top: $check-height;
+    position: absolute;
+  }
+}
+
+@keyframes loader-spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes checkmark {
+  0% {
+    height: 0;
+    width: 0;
+    opacity: 1;
+  }
+  20% {
+    height: 0;
+    width: $check-width;
+    opacity: 1;
+  }
+  40% {
+    height: $check-height;
+    width: $check-width;
+    opacity: 1;
+  }
+  100% {
+    height: $check-height;
+    width: $check-width;
+    opacity: 1;
+  }
 }
